Implemented JWT Authentication and Role-Based Authorization